# DEVSimPy

./: .codefactor.yml  .coveragerc  .coveralls.yml  .dockerignore  .gitignore  .gitmodules  .travis.yml  AIAdapter.py  AIPrompterDialog.py  AttributeEditor.py  CHANGES  CITATION.cff  COMPLETE_IMPLEMENTATION_ROADMAP.md  CONSOLIDATION_SUMMARY.md  CheckerGUI.py  Complexity.py  Components.py  ConnectDialog.py  ConnectionThread.py  Container.py  ControlNotebook.py  DSV.py  Decorators.py  DetachedFrame.py  DevsModelBuilder.py  DiagramConstantsDialog.py  DiagramNotebook.py  DirTreeCtrl.py  Dockerfile  DragList.py  DropTarget.py  Editor.py  ExperimentGenerator.py  FTPGUI.py  FindGUI.py  HtmlWindow.py  ImportLibrary.py  InteractionJSON.py  InteractionSocket.py  InteractionYAML.py  (+66 more)
.lens/: project.json
AI/: DEVS_Explanation.txt
DEVSimPy-2.9/: .directory  Components.py  DiagramNotebook.py  Editor.py  ImportLibrary.py  LabelGUI.py  LibraryTree.py  Menu.py  PreferencesGUI.py  PriorityGUI.py  SimulationGUI.py  Utilities.py  devsimpy.py
Domain/: Collector.7z  M1.amd  MonMC.cmd  Web.7z  __init__.py
DomainInterface/: DomainBehavior.py  DomainStructure.py  MasterModel.py  Object.py
Mixins/: Abstractable.py  Achievable.py  Attributable.py  Connectable.py  Iconizable.py  Plugable.py  Resizeable.py  Rotatable.py  Savable.py  Selectable.py  Structurable.py  __init__.py
Patterns/: Factory.py  Memoize.py  Observer.py  Singleton.py  Strategy.py  __init__.py
design/: verbose_config_design
devsimpy/: AIAdapter.py  AIPrompterDialog.py  ApplicationController.py  AttributeEditor.py  CITATION.cff  CheckerGUI.py  Complexity.py  Components.py  ConnectDialog.py  ConnectionThread.py  Container.py  ControlNotebook.py  DSV.py  Decorators.py  DetachedFrame.py  DiagramConstantsDialog.py  DiagramInfoDialog.py  DiagramNotebook.py  DragList.py  DropTarget.py  Editor.py  ExperimentGenerator.py  FTPGUI.py  FindGUI.py  HtmlWindow.py  ImportLibrary.py  InteractionJSON.py  InteractionSocket.py  InteractionYAML.py  Join.py  LabelGUI.py  LibPanel.py  LibraryTree.py  Menu.py  PlotGUI.py  PluginManager.py  PluginsGUI.py  PreferencesGUI.py  PrintOut.py  PriorityGUI.py  (+27 more)
devsimpy_mob -- v1.0/: config.xml
dsp/: tlihgt.dsp
examples/: model0.dsp
icons/: .directory
plugins/: blink.py  (+4 more)
(+2640 files in other folders)
